<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/no_widget_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorError"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:paddingRight="10dp"
            android:layout_height="wrap_content"
            android:text="@string/widget_name"
            android:textColor="@color/blueGray"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/widgetNameEditText"
            android:selectAllOnFocus="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/okButton"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@color/colorAccent"
            android:layout_marginRight="20dp"
            android:text="@string/ok_button_text"/>

        <Button
            android:id="@+id/cancelButton"
            android:text="@string/cancel_button_text"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>
</LinearLayout>