<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_widget_configuration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/windowBackground"
    android:paddingBottom="@dimen/activity_bottom_margin"
    android:paddingLeft="0dp"
    android:paddingRight="@dimen/activity_right_margin"
    android:paddingTop="16dp"
    tools:context="com.appbar.matocham.applicationbar.WidgetConfigurationActivity">

    <EditText
        android:id="@+id/widget_label"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_widget_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:onClick="submitConfiguration"
            android:text="@string/add_widget"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/apps_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
